--- a/src/views/home/dropletValues.css
+++ b/src/views/home/dropletValues.css
@@ -2,7 +2,7 @@
   height: 300px !important;
 }
 .slick-slide img {
-  height:100%;
+ max-height:100%;
   width: 100%;
 }
 .slick-prev {
